Log in
Skip to main content
Skip to sidebar
Linked Applications
Loading…
Dashboards
Projects
Issues
Give feedback to Atlassian
Help
Jira Core help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Qt Creator
QTCREATORBUG-31313
Incorrect handling of qualified names when using 'as' in qml imports
Log In
Closed
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Fixed
Priority:
P2: Important
Fix Version/s:
Qt Creator 15.0.0-beta2
,
Qt Creator 16.0.0
Affects Version/s:
Qt Creator 14.0.0
Component/s:
Quick / QML Support
Labels:
None
Platform/s:
All
Commits:
53ffb8f76 (15.0)
Description
See
explorer_wouRbOErpm.mp4
Attachments
Attachments
Options
Sort By Name
Sort By Date
Ascending
Descending
Thumbnails
List
explorer_wouRbOErpm.mp4
571 kB
26 Jul '24 12:04
Gerrit Reviews
Options
Issue Only
Show All Reviews
Show Open Reviews
Show All Issues
Show Open Issues
No reviews matched the request. Check your Options in the drop-down menu of this sections header.
Activity
People
Assignee:
Sami Shalayel
Reporter:
Elias Steurer
Votes:
0
Vote for this issue
Watchers:
2
Start watching this issue
Dates
Created:
26 Jul '24 12:05
Updated:
24 Oct '24 12:39
Resolved:
24 Oct '24 12:39
Gerrit Reviews
There are no open Gerrit changes
Show
There are 2 closed Gerrit changes
Hide
There are 2 closed Gerrit changes
qmljscheck: fix M129 warning on components with same name
Gerrit Review:
qmljscheck: fix M129 warning on components with same name
Gerrit Review: